# Create-Project

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat
configs/: CppDll.json  CppProject.json  RedbotCog.json  SpigotPlugin.json  project_types.json
skeletons/cpp_dll/: config.json
skeletons/cpp_dll/files/: makefile_dll.tpl
skeletons/cpp_project/: config.json
skeletons/cpp_project/files/: makefile_cpp.tpl
skeletons/redbot_cog/: config.json
skeletons/redbot_cog/files/: __init__.py.tpl
skeletons/spigot_plugin/: config.json
skeletons/spigot_plugin/files/: spigot_main_class.java.tpl  spigot_pom.xml.tpl
src/code/: main.cpp
src/code/cli/: cli.cpp  cli.h
src/code/project/: projectloader.cpp  projectloader.h
src/code/skeleton/: skeleton.cpp  skeleton.h
src/code/skeleton/loader/: skeletonloader.cpp  skeletonloader.h
src/code/skeleton/placeholder/: placeholderapi.cpp  placeholderapi.h
src/code/template/: templaterenderer.cpp  templaterenderer.h
src/code/util/: util.cpp  util.h
templates/: makefile_cpp.tpl  redbot_cog.py.tpl  spigot_main_class.java.tpl  spigot_plugin.yml.tpl  spigot_pom.xml.tpl
